# lightweight-chatbot

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  auth.py  chat.py
backend/app/core/: config.py
backend/app/database/: __init__.py  init_db.py
backend/app/exception/: __init__.py  http_exception.py
backend/app/models/: conversation.py  user.py
backend/app/schemas/: __init__.py  conversation.py  user.py
backend/app/services/: __init__.py  auth_service.py  chat_service.py  model_catalog.py  ollama_service.py  user_service.py
colab/: ollama_colab.ipynb
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: ChatWindow.tsx  ModelSelector.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
